doc: dos and don'ts formatting

--- a/docs/guidelines/language/messaging/empty-state-messages.mdx
+++ b/docs/guidelines/language/messaging/empty-state-messages.mdx
@@ -12,7 +12,7 @@ description: 'Empty-state messages guide users, reduce confusion, and encourage 
 
 ## Best practice template
 
-We follow this three-step approach when creating our empty-state messages. They explain why data is missing, suggest how to populate it, or offer links to relevant tools and documentation. Although not every empty-state message in a product requires all three steps, aim for this whenever possible. 
+We follow this three-step approach when creating our empty-state messages. They explain why data is missing, suggest how to populate it, or offer links to relevant tools and documentation. Although not every empty-state message in a product requires all three steps, aim for this whenever possible.
 
 | Step | Purpose | Description | Example |
 | :--------- | :---------- | :--------- |:--------- |
@@ -27,16 +27,14 @@ Use the template when the error stops users moving forward.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Heading: No zones added
-Description: Add zones to your profile to see them listed here.
-
+- Heading: No zones added<br/>
+Description: Add zones to your profile to see them listed here.<br/>
 Button: Add zones
 </div>
 
 <div class="donts" markdown>
-Heading: No zones created
-Description: Add region from your dashboard.
-
+- Heading: No zones created<br/>
+Description: Add region from your dashboard.<br/>
 Button: Make sectors
 </div>
 </div>
@@ -45,8 +43,8 @@ Use clear action verbs to show users how to fill the empty state.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Heading: No users added
-Description: Add users in User management.
+- Heading: No users added<br/>
+Description: Add users in User management.<br/>
 Button: Open User management
 </div>
 </div>
@@ -55,11 +53,11 @@ Use neutral framing of the empty state and avoid making it seem like a user fail
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-No users added
+- No users added
 </div>
 
 <div class="donts" markdown>
-You haven’t added any of your users
+- You haven’t added any of your users
 </div>
 </div>
 
@@ -67,11 +65,11 @@ Avoid “yet” or other expectation-related terms in titles.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Heading: No users added
+- Heading: No users added
 </div>
 
 <div class="donts" markdown>
-Title: No users added yet
+- Title: No users added yet
 </div>
 </div>
 
