--- a/docs/guidelines/language/messaging/error-messages-new.mdx
+++ b/docs/guidelines/language/messaging/error-messages-new.mdx
@@ -12,7 +12,7 @@ description: 'Error messages inform users when a system encounters a problem or 
 
 ## Best practice template
 
-We follow this three-step approach when creating our error messages. This empowers users when encountering errors and gives them the knowledge and confidence they need to move on. For more guidance on error messages with different severity levels, see states and events. 
+We follow this three-step approach when creating our error messages. This empowers users when encountering errors and gives them the knowledge and confidence they need to move on. For more guidance on error messages with different severity levels, see states and events.
 
 Although not every error message in a product requires all three steps, aim for this whenever possible.
 
@@ -29,10 +29,8 @@ Use the template when the error stops users moving forward.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Heading: No data received
-
-Description: Unable to receive data as sensor is inactive.
-
+- Heading: No data received<br/>
+Description: Unable to receive data as sensor is inactive.<br/>
 Instructions: Check sensor / Open sensor management
  </div>
 </div>
@@ -41,19 +39,19 @@ Avoid generic error messages or codes; instead provide specific data, value and 
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Failed to export data due to a connection error.
+- Failed to export data due to a connection error.
  </div>
 
  <div class="donts" markdown>
- Something happened.
+- Something happened.
  </div>
 
  <div class="donts" markdown>
- An error occurred.
+- An error occurred.
  </div>
 
 <div class="donts" markdown>
- Error 172.00046ERR
+- Error 172.00046ERR
  </div>
 </div>
 <br/>
@@ -62,44 +60,40 @@ Give clear reasons for input validation errors to ease user frustration.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Value out of range. Enter a number between 1 and 100.
+- Value out of range. Enter a number between 1 and 100.
  </div>
 
 <div class="dos" markdown>
-Number between 1 and 100 required.
+- Number between 1 and 100 required.
  </div>
 
  <div class="donts" markdown>
- Invalid value.
+- Invalid value.
  </div>
 </div>
 <br/>
-
 Avoid repeating your message in both the title and description.
-
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Bad request: Sorry, we could not process the request. Please check and try again.
+- Bad request: Sorry, we could not process the request. Please check and try again.
  </div>
  <div class="donts" markdown>
- Bad request. Sorry, bad request.
+- Bad request. Sorry, bad request.
  </div>
 </div>
 <br/>
-
 Avoid blaming the user with “you” and “your” — use passive voice as an exception.
-
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Value out of range. Enter a number between 1 and 100.
+- Value out of range. Enter a number between 1 and 100.
  </div>
 
  <div class="dos" markdown>
- Failed to delete device.
+- Failed to delete device.
  </div>
 
  <div class="donts" markdown>
- You have failed to delete the device.
+- You have failed to delete the device.
  </div>
 </div>
 <br/>
@@ -108,11 +102,11 @@ Provide specific and clear solutions to avoid making assumptions about user know
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Unsupported file type. Upload supported file types: .pdf and .docx.
+- Unsupported file type. Upload supported file types: .pdf and .docx.
  </div>
 
  <div class="donts" markdown>
-Unsupported file type. Upload supported file type.
+- Unsupported file type. Upload supported file type.
  </div>
 </div>
 <br/>
@@ -121,11 +115,11 @@ If the error is our responsibility and fault, use authentic and transparent apol
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Sorry, we’ve moved this page. Please check the changelog for the new location.
+- Sorry, we’ve moved this page. Please check the changelog for the new location.
  </div>
 
  <div class="donts" markdown>
-Sorry you entered the wrong address.
+- Sorry you entered the wrong address.
  </div>
 </div>
 <br/>
@@ -134,9 +128,8 @@ Use “please” only for extra or unexpected user actions that correct system-c
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Heading: Page Not Found
-
-Description: We could not find what you were looking for.
+- Heading: Page Not Found<br/>
+Description: We could not find what you were looking for.<br/>
 Instruction: Please contact the owner of the site that linked you to the original URL and let them know their link is broken.
  </div>
 </div>
@@ -145,7 +138,7 @@ Show urgency with wording, e.g. “immediately” if there are consequences from
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Update your software version immediately to avoid losing data.
+- Update your software version immediately to avoid losing data.
  </div>
 </div>
 <br/>
@@ -154,11 +147,11 @@ Use positive framing and avoid negative and alarming words like “wrong” and 
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Value out of range. Enter a number between 1 and 100.
+- Value out of range. Enter a number between 1 and 100.
  </div>
 
  <div class="donts" markdown>
-Wrong number.
+- Wrong number.
  </div>
 </div>
 <br/>
@@ -167,15 +160,15 @@ Use softening words, i.e. unfortunately and avoid negative contractions (“do n
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Unfortunately, you cannot open this page.
+- Unfortunately, you cannot open this page.
  </div>
 
  <div class="donts" markdown>
-You don’t have access.
+- You don’t have access.
  </div>
 
  <div class="donts" markdown>
-You can’t open this page.
+- You can’t open this page.
  </div>
 </div>
 <br/>
@@ -184,11 +177,11 @@ Be honest and transparent when you cannot explain the error or how to move the u
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Something went wrong and we couldn't complete your request. Try again later.
+- Something went wrong and we couldn't complete your request. Try again later.
  </div>
 
  <div class="donts" markdown>
-Operation stopped for unknown reason.
+- Operation stopped for unknown reason.
  </div>
 </div>
 <br/>
@@ -197,13 +190,13 @@ Avoid generic wording telling users to contact their admin or support as this is
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Open the chat window and paste the error into the input field for support.
+- Open the chat window and paste the error into the input field for support.
  </div>
  <div class="dos" markdown>
- Send error log to administrator.
+- Send error log to administrator.
  </div>
  <div class="donts" markdown>
-Contact admin to solve this issue.
+- Contact admin to solve this issue.
  </div>
 </div>
 <br/>
@@ -212,7 +205,7 @@ Avoid overpromising solutions to errors unless the team is working on the proble
 
 <div class="dos-and-donts" markdown>
  <div class="donts" markdown>
-   Our team is working overtime to fix this for you and it will be fixed by morning.
+   - Our team is working overtime to fix this for you and it will be fixed by morning.
  </div>
 </div>
 
