--- a/docs/guidelines/language/messaging/non-critical-information-messages.mdx
+++ b/docs/guidelines/language/messaging/non-critical-information-messages.mdx
@@ -17,13 +17,13 @@ description: Non-critical information messages come from the system and keep use
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Pump 3 cycle complete 14:32.
+- Pump 3 cycle complete 14:32.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-The operational sequence of Pump 3, located within Zone 2B, activated at 07:34 by admin 049 has completed its cycle (timestamp 14:32).
+- The operational sequence of Pump 3, located within Zone 2B, activated at 07:34 by admin 049 has completed its cycle (timestamp 14:32).
 </div>
 </div>
 
@@ -31,13 +31,13 @@ The operational sequence of Pump 3, located within Zone 2B, activated at 07:34 b
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System backup completed at 21:00.
+- System backup completed at 21:00.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Don’t worry! We’ll make sure your backup is complete before your morning coffee on Friday!
+- Don’t worry! We’ll make sure your backup is complete before your morning coffee on Friday!
 </div>
 </div>
 
@@ -45,19 +45,19 @@ Don’t worry! We’ll make sure your backup is complete before your morning cof
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Motor overload detected at 14:01:15
+- Motor overload detected at 14:01:15
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Emergency stop activated at 21:03:27
+- Emergency stop activated at 21:03:27
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Notification list:
+- Notification list:
 * Motor 3 overheating
 * Valve 7 malfunction
 </div>
@@ -65,13 +65,13 @@ Notification list:
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-System shutdown initiated 10 minutes ago.
+- System shutdown initiated 10 minutes ago.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Lubrication check due for press machine 2 in 3 days.
+- Lubrication check due for press machine 2 in 3 days.
 </div>
 </div>
 
@@ -79,19 +79,19 @@ Lubrication check due for press machine 2 in 3 days.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System backup complete.
+- System backup complete.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System backup completed at 15:00
+- System backup completed at 15:00
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-System backup done! Open and check now!
+- System backup done! Open and check now!
 </div>
 </div>
 
@@ -99,13 +99,13 @@ System backup done! Open and check now!
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Sensors calibrated. No further action required.
+- Sensors calibrated. No further action required.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Sensors calibrated. Click to check sensors (live link), calibration settings (live link) or manage your sensors (live link).
+- Sensors calibrated. Click to check sensors (live link), calibration settings (live link) or manage your sensors (live link).
 </div>
 </div>
 
@@ -113,13 +113,13 @@ Sensors calibrated. Click to check sensors (live link), calibration settings (li
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System will be updated within three hours.
+- System will be updated within three hours.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Scheduled maintenance for Line 4 starts at 14:00.
+- Scheduled maintenance for Line 4 starts at 14:00.
 </div>
 </div>
 
@@ -127,13 +127,13 @@ Scheduled maintenance for Line 4 starts at 14:00.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System update on line 4 starts at 14:00.
+- System update on line 4 starts at 14:00.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Notification: System update! Line: 4 / Starts: 14:00 (2pm).
+- Notification: System update! Line: 4 / Starts: 14:00 (2pm).
 </div>
 </div>
 
@@ -141,13 +141,13 @@ Notification: System update! Line: 4 / Starts: 14:00 (2pm).
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Line 3 shift schedule changed. See what's new.
+- Line 3 shift schedule changed. See what's new.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-🔄 Line 3 shift schedule updated. 👉 See what’s new.
+- 🔄 Line 3 shift schedule updated. 👉 See what’s new.
 </div>
 </div>
 
