--- a/docs/guidelines/language/messaging/progress-updates.mdx
+++ b/docs/guidelines/language/messaging/progress-updates.mdx
@@ -14,10 +14,10 @@ description: While some companies use humorous text like "Chopping the onions…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Downloading assets…
+- Downloading assets…
 </div>
 <div class="donts" markdown>
-Downloading Assets…
+- Downloading Assets…
 </div>
 </div>
 
@@ -25,29 +25,16 @@ Downloading Assets…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Loading…
-</div>
-<div class="dos" markdown>
-Downloading…
-</div>
-<div class="dos" markdown>
-Charging…
-</div>
-<div class="dos" markdown>
-Saving…
-</div>
-<div class="dos" markdown>
-Searching…
-</div>
-
-<div class="donts" markdown>
-Been loading…
+- Loading…
+- Downloading…
+- Charging…
+- Saving…
+- Searching…
 </div>
 <div class="donts" markdown>
-To be loading…
-</div>
-<div class="donts" markdown>
-Will be loading…
+- Been loading…
+- To be loading…
+- Will be loading…
 </div>
 </div>
 
@@ -55,10 +42,10 @@ Will be loading…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Downloading assets…
+- Loading file…
 </div>
 <div class="donts" markdown>
-File loading…
+- File loading…
 </div>
 </div>
 
@@ -67,13 +54,11 @@ File loading…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Loading…
+- Loading…
 </div>
 <div class="donts" markdown>
-Loading …
-</div>
-<div class="donts" markdown>
-Processing⋰
+- Loading …
+- Processing⋰
 </div>
 </div>
 
@@ -81,22 +66,14 @@ Processing⋰
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Uploading 5 items…
-</div>
-<div class="dos" markdown>
-Uploading items…
-</div>
-<div class="dos" markdown>
-Processing request…
-</div>
-<div class="dos" markdown>
-Saving settings…
-</div>
-<div class="dos" markdown>
-Saving changes…
+- Uploading 5 items…
+- Uploading items…
+- Processing request…
+- Saving settings…
+- Saving changes…
 </div>
 <div class="donts" markdown>
-Uploading 1 file
+- Uploading 1 file
 </div>
 </div>
 
@@ -104,16 +81,12 @@ Uploading 1 file
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-5 minutes remaining
-</div>
-<div class="dos" markdown>
-About 33 minutes remaining
+- 5 minutes remaining
+- About 33 minutes remaining
 </div>
 <div class="donts" markdown>
-5 minutes remaining…
-</div>
-<div class="donts" markdown>
-About 33 minutes remaining…
+- 5 minutes remaining…
+- About 33 minutes remaining…
 </div>
 </div>
 
@@ -121,10 +94,10 @@ About 33 minutes remaining…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Download → Downloading → Downloaded
+- Download → Downloading → Downloaded
 </div>
 <div class="donts" markdown>
-Download → Downloading… → Downloaded
+- Download → Downloading… → Downloaded
 </div>
 </div>
 
@@ -132,16 +105,12 @@ Download → Downloading… → Downloaded
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Downloading…
+- Downloading…
 </div>
 <div class="donts" markdown>
-Please wait.
-</div>
-<div class="donts" markdown>
-Thank you for waiting.
-</div>
-<div class="donts" markdown>
-Just a moment.
+- Please wait.
+- Thank you for waiting.
+- Just a moment.
 </div>
 </div>
 
@@ -149,13 +118,11 @@ Just a moment.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Carrying out tasks…
+- Carrying out tasks…
 </div>
 <div class="donts" markdown>
-Thank you for waiting.
-</div>
-<div class="donts" markdown>
-Just a moment.
+- Thank you for waiting.
+- Just a moment.
 </div>
 </div>
 
@@ -163,13 +130,9 @@ Just a moment.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Processing your request. This usually takes about 1–2 minutes.
-</div>
-<div class="dos" markdown>
-This step takes a bit longer than usual.
-</div>
-<div class="dos" markdown>
-We’re preparing your dashboard. Once it’s ready, you’ll be able to customize your view.
+- Processing your request. This usually takes about 1–2 minutes.
+- This step takes a bit longer than usual.
+- We’re preparing your dashboard. Once it’s ready, you’ll be able to customize your view.
 </div>
 </div>
 
