--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -16,13 +16,13 @@ description: Time-related messages help users understand how long processes take
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System update on Monday, August 22, 2025: 06:00–08:00
+- System update on Monday, August 22, 2025: 06:00–08:00
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Upcoming system update: 22 August
+- Upcoming system update: 22 August
 </div>
 </div>
 
@@ -30,13 +30,13 @@ Upcoming system update: 22 August
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Failed to synchronize data. Synchronized at 12:45 BST.
+- Failed to synchronize data. Synchronized at 12:45 BST.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System maintenance scheduled for Wednesday, August 22: 02:00–04:00 BST
+- System maintenance scheduled for Wednesday, August 22: 02:00–04:00 BST
 </div>
 </div>
 
@@ -44,13 +44,13 @@ System maintenance scheduled for Wednesday, August 22: 02:00–04:00 BST
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Failed to synchronize data. Last successful sync: 12:45 BST (UTC+1)
+- Failed to synchronize data. Last successful sync: 12:45 BST (UTC+1)
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-System maintenance scheduled for Wednesday, August 22, 02:00–04:00 BST (UTC+1).
+- System maintenance scheduled for Wednesday, August 22, 02:00–04:00 BST (UTC+1).
 </div>
 </div>
 
@@ -58,31 +58,31 @@ System maintenance scheduled for Wednesday, August 22, 02:00–04:00 BST (UTC+1)
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Update starts Tuesday, October 1, 2026: 02:00–04:00
+- Update starts Tuesday, October 1, 2026: 02:00–04:00
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Update starts soon.
+- Update starts soon.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Update starts later today.
+- Update starts later today.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Update takes a few moments.
+- Update takes a few moments.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Update takes a while.
+- Update takes a while.
 </div>
 </div>
 
@@ -90,19 +90,14 @@ Update takes a while.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Update will take a few minutes.
+- Update will take a few minutes.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Update may take a few minutes.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="donts" markdown>
-Update might take a few minutes.
+- Update may take a few minutes.
+- Update might take a few minutes.
 </div>
 </div>
 
@@ -110,7 +105,7 @@ Update might take a few minutes.
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-This process takes a few seconds.
+- This process takes a few seconds.
 </div>
 </div>
 
@@ -118,25 +113,15 @@ This process takes a few seconds.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Session expiring in 04:25 minutes.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Automatic logout in 03:45 minutes.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Meeting starts in 5 minutes.
+- Session expiring in 04:25 minutes.
+- Automatic logout in 03:45 minutes.
+- Meeting starts in 5 minutes.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Migration starts in 1 hour.
+- Migration starts in 1 hour.
 </div>
 </div>
 
@@ -144,19 +129,9 @@ Migration starts in 1 hour.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Data volume: 45/300 MB
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Saving data...50 of 300 MB saved
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-System update: 45% complete
+- Data volume: 45/300 MB
+- Saving data...50 of 300 MB saved
+- System update: 45% complete
 </div>
 </div>
 
@@ -166,13 +141,13 @@ System update: 45% complete
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-The system update can take a few hours.
+- The system update can take a few hours.
 </div>
 </div>
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-The update will finish within the next 60 minutes.
+- The update will finish within the next 60 minutes.
 </div>
 </div>
 
@@ -180,19 +155,13 @@ The update will finish within the next 60 minutes.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Due to the size of the data migration, it is estimated to take between 4-6 hours.
+- Due to the size of the data migration, it is estimated to take between 4-6 hours.
+- Data is being fetched from multiple sources, and the completion time varies depending on system conditions.
 </div>
 </div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Data is being fetched from multiple sources, and the completion time varies depending on system conditions.
-</div>
-</div>
-
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Due to the size of the migration, we have no idea when it will finish.
+- Due to the size of the migration, we have no idea when it will finish.
 </div>
 </div>
 
@@ -202,25 +171,10 @@ Due to the size of the migration, we have no idea when it will finish.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-The application will not be available during the update. We’ll notify you when it’s ready.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-The application is not available during the update.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-You can continue working until the update begins.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Installation files are downloaded in the background.
+- The application will not be available during the update. We’ll notify you when it’s ready.
+- The application is not available during the update.
+- You can continue working until the update begins.
+- Installation files are downloaded in the background.
 </div>
 </div>
 
@@ -228,31 +182,11 @@ Installation files are downloaded in the background.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-You can only postpone this update once.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-An update is scheduled to automatically install tonight.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-The installation will be updated tonight.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-Update must be installed before Friday, September 12, 2026.
-</div>
-</div>
-
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
-The device will restart during the update.
+- You can only postpone this update once.
+- An update is scheduled to automatically install tonight.
+- The installation will be updated tonight.
+- Update must be installed before Friday, September 12, 2026.
+- The device will restart during the update.
 </div>
 </div>
 
@@ -260,12 +194,12 @@ The device will restart during the update.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Postpone
-Remind me tomorrow
-Update now
-More information
-Stop
-Pause
+- Postpone
+- Remind me tomorrow
+- Update now
+- More information
+- Stop
+- Pause
 </div>
 </div>
 
