--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -26,34 +26,34 @@ We follow this three-step approach when creating our warning messages. This ensu
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Temperature readings from Zone 3 approaching 30°. Check cooling system and ensure all windows and doors are closed.
+- Temperature readings from Zone 3 approaching 30°. Check cooling system and ensure all windows and doors are closed.
 </div></div>
 
 ### Use clear, understandable titles and avoid generic warning messages.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Temperature approaching 30°
+- Temperature approaching 30°
 </div></div>
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Temperature warning
+- Temperature warning
 </div></div>
 
 ### Provide specific and clear consequences and solutions.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Heading: Leave without saving
-Description: You’re about to leave this page. Unsaved changes will be lost. Go back to save changes or exit without saving.
-Button: Leave without saving
+- Heading: Leave without saving<br/>
+Description: You’re about to leave this page. Unsaved changes will be lost. Go back to save changes or exit without saving.<br/>
+Button: Leave without saving<br/>
 Button: Go back
 </div>
 <div className="donts" markdown="true">
-Do you want to leave the page?
-Button: Continue
-Button: OK
+- Do you want to leave the page?<br/>
+Button: Continue<br/>
+Button: OK<br/>
 Button: Cancel
 </div>
 </div>
@@ -62,10 +62,10 @@ Button: Cancel
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Your changes will be lost if not saved.
+- Your changes will be lost if not saved.
 </div>
 <div className="donts" markdown="true">
-Your changes might be lost if not saved.
+- Your changes might be lost if not saved.
 </div>
 </div>
 
@@ -73,17 +73,17 @@ Your changes might be lost if not saved.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Heading: Login attempt from unknown device
-Description: Review access settings or security guidelines to prevent unauthorized access.
-Button: Open guidelines
+- Heading: Login attempt from unknown device<br/>
+Description: Review access settings or security guidelines to prevent unauthorized access.<br/>
+Button: Open guidelines<br/>
 Button: Open access settings
 </div>
 </div>
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-Heading: Unauthorized access attempt on Control Panel A
-Description: Review access logs and verify user credentials.
+- Heading: Unauthorized access attempt on Control Panel A<br/>
+Description: Review access logs and verify user credentials.<br/>
 Button: Open access logs
 </div>
 </div>
@@ -92,11 +92,11 @@ Button: Open access logs
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Heading: Pressure in Tank B approaching limit
+- Heading: Pressure in Tank B approaching limit<br/>
 Description: Initiate release protocol to avoid exceeding threshold.
 </div>
 <div class="donts" markdown>
-Heading: Pressure in Tank B approaching limit
+- Heading: Pressure in Tank B approaching limit<br/>
 Description: Pressure in Tank B approaching limit so initiate release protocol.
 </div>
 </div>
@@ -105,10 +105,10 @@ Description: Pressure in Tank B approaching limit so initiate release protocol.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-This action will delete all sensor data from the last 24 hours. Do you want to proceed and delete?
+- This action will delete all sensor data from the last 24 hours. Do you want to proceed and delete?
 </div>
 <div class="donts" markdown>
-Are you sure you want to delete?
+- Are you sure you want to delete?
 </div>
 </div>
 
@@ -116,13 +116,13 @@ Are you sure you want to delete?
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Title: Reset device
-Description: A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone.
-Button: Reset
+- Title: Reset device<br/>
+Description: A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone.<br/>
+Button: Reset<br/>
 Button: Cancel
 </div>
 <div class="donts" markdown>
-Press reset to proceed.
+- Press reset to proceed.
 </div>
 </div>
 
@@ -130,7 +130,7 @@ Press reset to proceed.
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-WARNING!! FAILURE! IMMEDIATE ACTION REQUIRED!!
+- WARNING!! FAILURE! IMMEDIATE ACTION REQUIRED!!
 </div>
 </div>
 
