--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -17,10 +17,10 @@ Use sentence case and end with a period (similar to tooltips).
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-View the current status of the production line.
+- View the current status of the production line.
  </div>
  <div class="donts" markdown>
-VIEW CURRENT STATUS OF PRODUCTION LINE
+- VIEW CURRENT STATUS OF PRODUCTION LINE
  </div>
 </div>
 <br/>
@@ -29,29 +29,29 @@ Use infotips to support users with guidance and contextual information.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Maximum allowable hydraulic pressure (bar).
+- Maximum allowable hydraulic pressure (bar).
  </div>
 <div class="dos" markdown>
-Current motor load in percentage.
+- Current motor load in percentage.
  </div>
  <div class="dos" markdown>
-Enables automatic system recalibration.
+- Enables automatic system recalibration.
  </div>
  <div class="dos" markdown>
- Unique identifier for the production batch.
+ - Unique identifier for the production batch.
  </div>
 </div>
 <br/>
 
-Use infotips to help users understand complex terminology. 
+Use infotips to help users understand complex terminology.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-SCADA System
+- SCADA System<br/>
 Supervisory Control and Data Acquisition: A system that monitors and controls industrial processes locally or at remote locations.
  </div>
 <div class="dos" markdown>
-PLC cycle time
+- PLC cycle time<br/>
 This indicates the time (in milliseconds) it takes for the Programmable Logic Controller to execute one full scan of its program logic.
  </div>
 </div>
@@ -61,11 +61,11 @@ Use infotips to help users understand complex features.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Set thresholds
+- Set thresholds<br/>
 Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).
  </div>
 <div class="dos" markdown>
-PID controller tuning
+- PID controller tuning<br/>
 Adjust these parameters (Proportional, Integral, Derivative) to optimize the system's response to errors and achieve stable control.
  </div>
 </div>
@@ -75,7 +75,7 @@ Use infotips to help users understand complex workflows.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Schedule maintenance
+- Schedule maintenance<br/>
 This workflow guides you through planning and assigning preventive maintenance tasks. First, select the asset, then define the task type, and finally set the recurrence schedule.
  </div>
 </div>
@@ -85,10 +85,10 @@ Use paragraphs to split complex information and use bullet points or lists for c
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Power meter monitoring
-Area: Production floor
-Present consumption: 120 kW
-Peak: 150 kW
+- Power meter monitoring<br/>
+Area: Production floor<br/>
+Present consumption: 120 kW<br/>
+Peak: 150 kW<br/>
 Button: Open meter list
  </div>
 </div>
@@ -98,10 +98,10 @@ Use imperative verbs (commands) for instructions and guidance.
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.
+- Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.
  </div>
 <div class="dos" markdown>
-Define and manage sequences of operations and ingredient quantities for automated production processes.
+- Define and manage sequences of operations and ingredient quantities for automated production processes.
  </div>
 </div>
 <br/>
@@ -110,11 +110,11 @@ Avoid personal pronouns (you, we, our, etc.).
 
 <div class="dos-and-donts" markdown>
  <div class="dos" markdown>
-Select a device from the network to begin configuration.
+- Select a device from the network to begin configuration.
  </div>
 
  <div class="donts" markdown>
-Select one of your devices to begin configuring your factory assets.
+- Select one of your devices to begin configuring your factory assets.
  </div>
 </div>
 
